samples/_failures_safe/1761267404_99423d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac0a49a2.c: In function ‘main’:
./samples/SAFE/__tmp_ac0a49a2.c:144:16: error: missing terminating " character
  144 |         printf("1. Display matrices\n
      |                ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ac0a49a2.c:144:9: error: expected expression at end of input
  144 |         printf("1. Display matrices\n
      |         ^~~~~~
./samples/SAFE/__tmp_ac0a49a2.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ac0a49a2.c:144:9: error: expected declaration or statement at end of input
